objects/Contact.object
<CustomObject
    <fields>
        <fullName>Erlotinib_Rx_for_Lung_Cancer_Decile__c</fullName>
        <label>Erlotinib Rx for Lung Cancer Decile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DECILE 1</fullName>
                    <label>Decile 1</label>
                </value>
                <value>
                    <fullName>DECILE 2</fullName>
                    <label>Decile 2</label>
                </value>
                <value>
                    <fullName>DECILE 3</fullName>
                    <label>Decile 3</label>
                </value>
                <value>
                    <fullName>DECILE 4</fullName>
                    <label>Decile 4</label>
                </value>
                <value>
                    <fullName>DECILE 5</fullName>
                    <label>Decile 5</label>
                </value>
                <value>
                    <fullName>DECILE 6</fullName>
                    <label>Decile 6</label>
                </value>
                <value>
                    <fullName>DECILE 7</fullName>
                    <label>Decile 7</label>
                </value>
                <value>
                    <fullName>DECILE 8</fullName>
                    <label>Decile 8</label>
                </value>
                <value>
                    <fullName>DECILE 9</fullName>
                    <label>Decile 9</label>
                </value>
                <value>
                    <fullName>DECILE 10</fullName>
                    <label>Decile 10</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Erlotinib_Rx_for_Lung_Cancer__c</fullName>
        <label>Erlotinib Rx for Lung Cancer</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Erlotinib_patients_wLung_Cancer_Decile__c</fullName>
        <label>Erlotinib patients wLung Cancer Decile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decile 1</fullName>
                </value>
                <value>
                    <fullName>Decile 2</fullName>
                </value>
                <value>
                    <fullName>Decile 3</fullName>
                </value>
                <value>
                    <fullName>Decile 4</fullName>
                </value>
                <value>
                    <fullName>Decile 5</fullName>
                </value>
                <value>
                    <fullName>Decile 6</fullName>
                </value>
                <value>
                    <fullName>Decile 7</fullName>
                </value>
                <value>
                    <fullName>Decile 8</fullName>
                </value>
                <value>
                    <fullName>Decile 9</fullName>
                </value>
                <value>
                    <fullName>Decile 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Erlotinib_patients_with_Lung_Cancer__c</fullName>
        <label>Erlotinib patients with Lung Cancer</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Erlotnib_Phys_Accessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Erlotnib Phys Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Erlotnib_TRx__c</fullName>
        <label>Erlotnib TRx</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_48_Hour_Notice_Sent__c</fullName>
        <label>Event 48 Hour Notice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Reminder_Sent__c</fullName>
        <label>Event Reminder Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceeded_Prev_Year_SL_Limit_Date__c</fullName>
        <label>Exceeded Prev. Year SL Limit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceeded_SL_Limit_Threshold_Date__c</fullName>
        <label>Exceeded SL Limit Threshold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Email_Sent__c</fullName>
        <description>Used to capture Date Sales rep received Email regarding Expense, NPI Contact Update.</description>
        <inlineHelpText>Used to capture Date Sales rep received Email regarding Expense, NPI Contact Update.</inlineHelpText>
        <label>Expense Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Samples__c</fullName>
        <label>Feb Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fellow__c</fullName>
        <label>Fellow</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Match_Count_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Match Count Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Sample_AE_Email_Notification__c</fullName>
        <description>This field is used to capture the date the email is sent to inform the account executive that this customer has submitted their first G360 sample.</description>
        <label>First Sample AE Email Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Sample_Date__c</fullName>
        <label>First Sample Date</label>
        <summarizedField>Guardant_360_Sample__c.Date_Received__c</summarizedField>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GH_Approved_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GH Approved Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GH_Primary_Degree__c</fullName>
        <label>Primary Degree</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRO_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For an AE to be able to see a contact, the &apos;Region&apos; field on the AE&apos;s user record must = the &apos;Region&apos; field on the Regional Director</description>
        <inlineHelpText>Denotes contacts who are involved in the Account Integration project</inlineHelpText>
        <label>Account Integration Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_School__c</fullName>
        <label>Graduation School</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardant_Advocate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guardant Advocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Type__c</fullName>
        <label>HCP Type</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Ordered__c</fullName>
        <description>Has this MD ever submitted a sample? (Hidden field used for reporting)</description>
        <formula>Number_of_Samples__c&gt;=1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Follow_up_date__c</fullName>
        <description>Hidden field used in process that updates Next Follow-up Date. Move along, nothing to see here.</description>
        <label>Hidden Follow-up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMS_Prescriber_ID__c</fullName>
        <label>IMS Prescriber ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Tier__c</fullName>
        <label>IMS Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS__c</fullName>
        <label>IMS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1 - Control</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Control</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - Control</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - IMS</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - IMS</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - IMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ION_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ION Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ION_SAM_Email__c</fullName>
        <label>ION SAM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ION_SAM_Name__c</fullName>
        <label>ION SAM Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ION_SAM_Phone__c</fullName>
        <label>ION SAM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ISR_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISR Page</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ISR_Target__c.ISR_Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ISR_Target__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISR_Region__c</fullName>
        <inlineHelpText>Used only for ISR Contacts</inlineHelpText>
        <label>ISR Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Great Lakes-Southeast</fullName>
                </value>
                <value>
                    <fullName>Atlantic-South</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Central-Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISR_Send_to_RD__c</fullName>
        <description>Used on ISR contact page</description>
        <label>ISR Send to RD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The office has requested an inservice visit</fullName>
                </value>
                <value>
                    <fullName>The office has submitted a sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISR_Stage__c</fullName>
        <label>ISR Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stage 1</fullName>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Stage 2</fullName>
                    <label>Info Gathering</label>
                </value>
                <value>
                    <fullName>Stage 3</fullName>
                    <label>Closing</label>
                </value>
                <value>
                    <fullName>Stage 4</fullName>
                    <label>Nurturing</label>
                </value>
                <value>
                    <fullName>Turn over to RD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISR_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISR Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISR_Tier__c</fullName>
        <label>ISR Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive_Contact_Owner__c</fullName>
        <formula>NOT(Owner.IsActive)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this owned by an inactive owner?</inlineHelpText>
        <label>Inactive Contact Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individually_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individually Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Invite_Sent_Date__c</fullName>
        <label>Initial Invite Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integrated_formula__c</fullName>
        <formula>IF(GRO_Tool__c=TRUE, 
Integration_Questions_Completed__c/Integration_Questions_Total__c, 
(IF(NOT(ISBLANK(Care_Team_Member__c)),Care_Team_Member__r.Integration_Questions_Completed__c/Care_Team_Member__r.Integration_Questions_Total__c, 
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Integration_Contact_Type__c</fullName>
        <label>Integration Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Care Team Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Questions_Completed__c</fullName>
        <description>Integration Questions Completed</description>
        <label>Integration Questions Completed</label>
        <summaryFilterItems>
            <field>Account_Integration_Tasks__c.Mark_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Integration_Tasks__c.Physician__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Integration_Questions_Total__c</fullName>
        <label>Integration Questions Total</label>
        <summaryForeignKey>Account_Integration_Tasks__c.Physician__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>International_License_Identifier__c</fullName>
        <label>International License Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Contact_a_Study_Manager__c</fullName>
        <description>Pharma Portal Study Managers cannot easily switch to Provider Portal if &apos;Portal Account&apos; is checked</description>
        <inlineHelpText>If this contact is already a Study Manager, please notify dl-portal-dev with the contact&apos;s email address and a request to add Provider Portal functionality to the user&apos;s account.</inlineHelpText>
        <label>Is Contact a Study Manager?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>YES--See &apos;Related Studies&apos; List below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Secondary_Physician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secondary Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAN_samples__c</fullName>
        <inlineHelpText># of samples in January of current year</inlineHelpText>
        <label>Jan samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Samples__c</fullName>
        <label>Jul Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Samples__c</fullName>
        <label>Jun Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keep_Me_Informed_on_Clinical_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Me Informed on Clinical Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LIMS_Data_Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates which contacts must be fixed b/c of LIMS update of Jan, 2020</inlineHelpText>
        <label>LIMS Data Fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_1_1_Date__c</fullName>
        <description>Last date there was a 1:1 with this contact. Determined by activity subject containing &apos;1:1&apos;. Process: Contact: Update Touch Dates</description>
        <inlineHelpText>Last date there was a 1:1 with this contact.</inlineHelpText>
        <label>Last 1:1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Affiliation_Sample_Date__c</fullName>
        <description>Value filled by DLRS</description>
        <inlineHelpText>Last Sample Received from an affiliation of this contact.</inlineHelpText>
        <label>Last Affiliation Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Affiliation_Sample_Final_ReportDate__c</fullName>
        <label>Last Affiliation Sample Final ReportDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Affiliation_Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Affiliation Sample</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Sample must be an affiliation sample</errorMessage>
            <filterItems>
                <field>Guardant_360_Sample__c.Affiliation_Sample__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>Contacts (Last Affiliation Sample)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Contacted_by__c</fullName>
        <label>Last Contacted by</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Date__c</fullName>
        <description>Last date this contact was emailed. Determined by activity subject beginning with &apos;Email:&apos; See PB &quot;Task:Last EMail Date&quot;.</description>
        <inlineHelpText>Last date this contact was emailed</inlineHelpText>
        <label>Last Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Finalized_Sample_Date__c</fullName>
        <label>Last Finalized Sample Date</label>
        <summarizedField>Guardant_360_Sample__c.Final_Report_Date__c</summarizedField>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Portal_Login_Date__c</fullName>
        <label>Last Portal Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Sample_366_days__c</fullName>
        <formula>IF(Last_Sample_Date__c&lt;(TODAY()-365),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for reporting</inlineHelpText>
        <label>Last Sample &lt;366 days?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Sample_90_days__c</fullName>
        <description>Hidden report field. Was the last sample within the last 90 days?</description>
        <formula>Last_Sample_Date__c&gt;(TODAY()-90)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Sample &gt;90 days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sample_Date__c</fullName>
        <label>Last Sample Date</label>
        <summarizedField>Guardant_360_Sample__c.Date_Received__c</summarizedField>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Sample</label>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Year_s_Expense_Total__c</fullName>
        <formula>Actual_NPI__r.Last_Year_s_Expense_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Year&apos;s Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_Event_Date__c</fullName>
        <description>Managed by Marketing</description>
        <inlineHelpText>Last date this contact attended a KOL event.</inlineHelpText>
        <label>Latest Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Expense_Report_Institution_City__c</fullName>
        <label>Latest Expense Report Institution City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Expense_Report_Institution__c</fullName>
        <label>Latest Expense Report Institution</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Expense_Report_State__c</fullName>
        <label>Latest Expense Report State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Speaker_Event_Date__c</fullName>
        <label>Latest Speaker Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_eligible__c</fullName>
        <formula>MedPro_State_License__r.Overall_license_eligibility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that the contact’s license makes him or her eligible to write prescriptions in the state considering the license status, expiration date, sanctions, and license type (e.g. MD, DO, PA, APRN, etc).</inlineHelpText>
        <label>License eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_Count__c</fullName>
        <label>Portal Login Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lung_Class__c</fullName>
        <label>Lung Class</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Cancer_Class__c</field>
            <operation>contains</operation>
            <value>Lung</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lung_Prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lung Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lung_Samples_Last_90_Days__c</fullName>
        <label>Lung Samples Last 90 Days</label>
        <summarizedField>Guardant_360_Sample__c.Sample_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Cancer_Class__c</field>
            <operation>equals</operation>
            <value>Lung</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Date_Received__c</field>
            <operation>greaterThan</operation>
            <value>7/14/2017</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lung_Super_Cap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lung/Super Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M2M_MDs_2_Months_Ago__c</fullName>
        <description>Hidden field used in reporting</description>
        <formula>IF(Number_of_Samples_2_Months_Ago__c*Number_of_Samples_3_Months_Ago__c&gt;=1, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If MD submitted samples BOTH 2 months ago and the month prior to that, this will be &apos;1&apos;. It will be &apos;0&apos; if MD submitted 0 samples either month.</inlineHelpText>
        <label>M2M MDs 2 Months Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2M_MDs_Last_month__c</fullName>
        <description>Hidden field used in reporting.</description>
        <formula>IF(Number_of_Samples_2_Months_Ago__c*Number_of_Samples_Last_Month__c&gt;=1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If MD submitted samples BOTH last month and the month previous, this will be &apos;1&apos;. It will be &apos;0&apos; if MD submitted 0 samples either month.</inlineHelpText>
        <label>M2M MDs Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2M_MDs_this_month__c</fullName>
        <formula>IF( Number_of_Samples_Current_Month__c*Number_of_Samples_Last_Month__c&gt;=1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If MD submitted samples BOTH this month and last, this will be &apos;1&apos;. It will be &apos;0&apos; if MD submitted 0 samples either month.</inlineHelpText>
        <label>M2M MDs This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDs_in_Quintiles_1_2__c</fullName>
        <formula>IF(Best_Quintile__c&lt;=2 &amp;&amp; Best_Quintile__c&gt;=1, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field. Is &apos;1&apos; if Best Quintile is 1 or 2, otherwise is &apos;0&apos;</inlineHelpText>
        <label>MDs in Quintiles 1-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDs_in_Quintiles_3_5__c</fullName>
        <formula>IF(Best_Quintile__c&lt;=5 &amp;&amp; Best_Quintile__c&gt;=3, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field. Is &apos;1&apos; if Best Quintile is 3,4, or 5, otherwise is &apos;0&apos;</inlineHelpText>
        <label>MDs in Quintiles 3-5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDs_who_Ordered_2_Months_ago__c</fullName>
        <formula>IF( Number_of_Samples_2_Months_Ago__c&gt;=1, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for reporting. &apos;1&apos; if MD ordered 2 months ago, &apos;0&apos; if MD didn&apos;t</inlineHelpText>
        <label>MDs who Ordered 2 Months ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDs_who_Ordered_last_Month__c</fullName>
        <formula>IF(Number_of_Samples_Last_Month__c&gt;=1, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for reporting. &apos;1&apos; if MD ordered last month, &apos;0&apos; if MD didn&apos;t</inlineHelpText>
        <label>MDs who Ordered last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDs_who_Ordered_this_Month__c</fullName>
        <formula>IF(Number_of_Samples_Current_Month__c&gt;=1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for reporting. &apos;1&apos; if MD has ordered this month, &apos;0&apos; if MD hasn&apos;t</inlineHelpText>
        <label>MDs who Ordered this Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDs_who_Ordered_this_Quarter__c</fullName>
        <formula>IF( Number_of_Samples_Current_Qtr__c&gt;=1, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for reporting. &apos;1&apos; if MD has ordered this quarter, &apos;0&apos; if MD hasn&apos;t</inlineHelpText>
        <label>MDs who Ordered this Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MP_Comment__c</fullName>
        <description>Notes for Qualified by Exception records</description>
        <inlineHelpText>Notes describing the rationale for qualifying despite missing or ‘bad’ license attributes.</inlineHelpText>
        <label>Comment</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Conflicting_States__c</fullName>
        <formula>MedPro_State_License__r.License_state__c   &lt;&gt;   MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that the state license and address state conflict.  This will cause a record to appear on an exception report.</inlineHelpText>
        <label>Conflicting States?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_NPI_for_Validation__c</fullName>
        <formula>IF(ISBLANK(Actual_NPI__c), NPI_Number__c ,  Actual_NPI__r.NPI_Number__c )</formula>
        <inlineHelpText>This is Actual NPI; if Actual NPI is blank, then this is NPI Number.</inlineHelpText>
        <label>NPI for Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Placeholder1__c</fullName>
        <label>MP_Placeholder1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Placeholder2__c</fullName>
        <label>MP_Placeholder2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Placeholder3__c</fullName>
        <label>MP_Placeholder3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
</CustomObject>